# app_scaffold

./: .gitignore  CLAUDE.md  docker-compose.yml
apps/backend/: .env.example  CLAUDE.md  Dockerfile  main.py  pyproject.toml
apps/backend/app_backend/: app.py  config.py  db.py  middleware.py  settings.py
apps/backend/app_backend/docs/: health.md
apps/backend/app_backend/routers/: _test_runner.py  health.py
apps/backend/app_backend/tests/: health.py
apps/backend/app_backend/utils/: auth.py
apps/web/: CLAUDE.md  package-lock.json  package.json
apps/web/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx  theme.ts
apps/web/app/(protected)/: layout.tsx
apps/web/app/(protected)/home/: page.tsx
apps/web/app/api/auth/[...nextauth]/: route.ts
apps/web/utils/: api.tsx
